--- a/views/pages/adv_calc.erb
+++ b/views/pages/adv_calc.erb
@@ -7,6 +7,13 @@
   <form action='/adv-calc' method='post'>
   <tr>
     <td style='text-align: center;'>
+      Base
+    </td>
+    <td style='text-align: center;'>
+      Exponent
+    </td>
+  </tr><tr>
+    <td>
       <input type='text' class='num1' name='num1' />
     </td>
     <td style='text-align: center;'>
