--- a/views/static/home.erb
+++ b/views/static/home.erb
@@ -1,5 +1,5 @@
-<div class='home_splash'>
+<div class='home_splash' style='text-align: center;'>
 
-  Welcome home
+  Welcome to the Calc.
 
 </div>
